changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix broken fountains in random maps.
Nicolas Weeger 2011-01-08

test/unit/common/check_living.c: Modify some hard coded array sizes to use
    the defined values.  Remove randomly generated input values and put those
    into arrays - the test only works with specific input values, and randomly
    generating them only works if one is using the same random number generator.
test/unit/common/check_item.c: Disable this test if not using glibc - its
    checking requires specific random number sequence - however, since many
    of the RANDOM() calls are from within libcommon, not easy to hard code
    the values.
INSTALL: Update notes on make check - only works with default values.
MSW 2010-12-26

Change the Animations structure to use New_Face* instead of indexes.
Nicolas Weeger 2010-12-05

Accept skill names with spaces (sense curse/sense magic) in addexp
command.
Andreas Kirschbaum 2010-12-04

Fix some compilers errors in CRE - 0b is non standard constant declaration,
some compilers do not like a semicolon after Q_PROPERTY declarations, and
it seemed some include files were missing.
MSW 2010-11-26

Added function to python plugin for getting the material name and materil
number of objects.  Returns python dict. (Affects cfpython_object.c and
cfpython_object_private.h)
Alestan 2010-11-25

Takes in account the magic of a cauldron when the chance of successfully
making a recipe is calculated (adds (cauldron->magic+1)/2 to the skill_level
in the calculation).
Khaleh 2010-11-24

Allow cost_string_from_value() callers to specify maximum coin to use.