@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't make 2 fountains in random maps, one is enough.
+Nicolas Weeger 2011-01-08
+
 Fix broken fountains in random maps.
 Nicolas Weeger 2011-01-08
 
